# EC8_Programacion3_Patrones

./: CMakeLists.txt  README.md  main.cpp
include/: expense_concepts.h  expense_decorators.h  expense_exporters.h  expense_factory.h  expense_strategy.h  expense_types.h  expenses.h
tests/: CMakeLists.txt  test_decorator_audit_preserves_inner_export.cpp  test_decorator_summary_adds_total.cpp  test_expenses.cpp  test_factory_create_csv_exporter.cpp  test_factory_create_json_exporter.cpp  test_integration_export_sorted_expenses.cpp  test_strategy_sort_by_amount_descending.cpp  test_strategy_sort_by_category_then_date.cpp
